--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+.hero{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+.pic{
+	width:400px;
+	height:200px;
+	object-fit: cover;
+}
+.right{
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	align-items:center;
+	padding:40px;
+}
+.right button{
+	padding:5px;
+	background:red;
+	border-radius:5px;
+	color:white;
+	border:none;
+}
